--- a/docker-examples/docker-compose.yml
+++ b/docker-examples/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.1'
 
 services:
   hello:
-    image: canthefason/go-watcher:latest
+    image: lasloche/go-watcher:latest
     command: watcher -run hello
     ports:
       - "7000:7000"
